--- a/services.html
+++ b/services.html
@@ -585,6 +585,239 @@
             </div>
             <!-- ========== End testimonials ========== -->
 
+            <!-- Stories -->
+            <div class="p-relative container section-margin">
+                <div class="section-title mb-70 text-center d-flex flex-column">
+                    <h2 class="title-h2 text-upper">
+                        Latest Stories
+                    </h2>
+                    <!-- <p class="max-w570 mt-20 border-section-bottom">
+                        Latest News
+                    </p> -->
+                </div>
+                <div class="p-relative box-image-transform dsn-style-list">
+                    <div class="root-posts ">
+                        <div class="dsn-posts dsn-post-type-cards box-content-hover">
+                            <div class="has-parallax-image dsn-swiper p-relative"
+                                data-dsn-option='{"slidesPerView":1,"spaceBetween":30,"centeredSlides":false, "autoHeight":true}'>
+                                <div class="swiper-container ">
+                                    <div class="swiper-wrapper">
+                                        <article
+                                            class="dsn-item-post grid-item over-hidden p-relative box-hover-image swiper-slide">
+                                            <div class="box-content d-flex ">
+                                                <a class="effect-ajax box-image-link bg-shadow"
+                                                    href="graphic-design-is-important.html" data-dsn-text="Our Stories">
+                                                    <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
+                                                        data-overlay="4">
+                                                        <img src="assets/img/blog/graphic-design.jpg"
+                                                            class="cover-bg-img" alt="" />
+                                                    </div>
+                                                </a>
+                                                <div
+                                                    class="post-content dsn-bg p-relative z-index-1 d-flex flex-column">
+
+                                                    <div class="post-title-info">
+                                                        <div class="post-meta max-w750">
+                                                            <!-- <div class="entry-date d-inline-block entry-meta mb-10">
+                                                                June 12, 2022
+                                                            </div> -->
+                                                            <!-- <span class="mr-5 ml-5 separator-between"> ..</span> -->
+                                                            <div
+                                                                class="p-relative d-inline-block dsn-category dsn-bg metas mb-10 entry-meta">
+                                                                <span data-separator=" & ">Informational</span>
+                                                            </div>
+                                                        </div>
+                                                        <h2 class="post-title dsn-bg title-block">
+                                                            <a class="effect-ajax"
+                                                                href="graphic-design-is-important.html"
+                                                                data-dsn-text="Our Stories">
+                                                                Your business needs Graphic Design more than you
+                                                                realize.
+                                                            </a>
+                                                        </h2>
+                                                    </div>
+
+                                                    <div class="post-description-info ">
+                                                        <p class="section_description mt-15 max-w570 ">
+                                                            Amidst the flourishing digital media world, businesses
+                                                            are increasingly looking for ways to connect with a
+                                                            target audience.
+                                                        </p>
+                                                        <div class="d-flex mt-20 dsn-def-btn dsn-hover-icon">
+                                                            <a href="single-post.html"
+                                                                class="effect-ajax dsn-btn dsn-border border-color-default  background-section has-icon-left">
+                                                                <span
+                                                                    class="dsn-icon dsn-bg-before btn-icon-left heading-color z-index-1"><i
+                                                                        class="fas fa-angle-right"></i></span>
+                                                                <span
+                                                                    class="title-btn p-relative  z-index-1 heading-color">READ
+                                                                    ARTICLE</span>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+
+
+                                                </div>
+                                            </div>
+
+
+                                        </article>
+                                        <article
+                                            class="dsn-item-post grid-item over-hidden p-relative box-hover-image swiper-slide">
+                                            <div class="box-content d-flex ">
+                                                <a class="effect-ajax box-image-link bg-shadow" href="single-post.html"
+                                                    data-dsn-text="Our Stories">
+                                                    <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
+                                                        data-overlay="4">
+                                                        <img src="assets/img/blog/branding.jpg" class="cover-bg-img"
+                                                            alt="" />
+                                                    </div>
+                                                </a>
+                                                <div
+                                                    class="post-content dsn-bg p-relative z-index-1 d-flex flex-column">
+
+                                                    <div class="post-title-info">
+                                                        <div class="post-meta max-w750">
+                                                            <!-- <div class="entry-date d-inline-block entry-meta mb-10">
+                                                                Marc 15, 2022
+                                                            </div>
+                                                            <span class="mr-5 ml-5 separator-between"> ..</span> -->
+                                                            <div
+                                                                class="p-relative d-inline-block dsn-category dsn-bg metas mb-10 entry-meta">
+                                                                <span data-separator=" & ">Informational</span>
+                                                            </div>
+                                                        </div>
+                                                        <h2 class="post-title dsn-bg title-block">
+                                                            <a class="effect-ajax" href="single-post.html"
+                                                                data-dsn-text="Our Stories">
+                                                                What is rebranding, and when is it to be used?
+                                                            </a>
+                                                        </h2>
+                                                    </div>
+
+                                                    <div class="post-description-info ">
+                                                        <p class="section_description mt-15 max-w570 ">
+                                                            The fact is branding matters. While successful brands stand
+                                                            the test of time, many others fizzle and fail to impact.
+                                                        </p>
+                                                        <div class="d-flex mt-20 dsn-def-btn dsn-hover-icon">
+                                                            <a href="what-is-rebranding.html"
+                                                                class="effect-ajax dsn-btn dsn-border border-color-default  background-section has-icon-left">
+                                                                <span
+                                                                    class="dsn-icon dsn-bg-before btn-icon-left heading-color z-index-1"><i
+                                                                        class="fas fa-angle-right"></i></span>
+                                                                <span
+                                                                    class="title-btn p-relative  z-index-1 heading-color">READ
+                                                                    ARTICLE</span>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+
+                                                </div>
+                                            </div>
+
+
+                                        </article>
+                                        <article
+                                            class="dsn-item-post grid-item over-hidden p-relative box-hover-image swiper-slide">
+                                            <div class="box-content d-flex ">
+                                                <a class="effect-ajax box-image-link bg-shadow" href="single-post.html"
+                                                    data-dsn-text="Our Stories">
+                                                    <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
+                                                        data-overlay="4">
+                                                        <img src="assets/img/blog/web-design.jpg" class="cover-bg-img"
+                                                            alt="" />
+                                                    </div>
+                                                </a>
+                                                <div
+                                                    class="post-content dsn-bg p-relative z-index-1 d-flex flex-column">
+
+                                                    <div class="post-title-info">
+                                                        <div class="post-meta max-w750">
+                                                            <!-- <div class="entry-date d-inline-block entry-meta mb-10">
+                                                                Oct 23, 2022
+                                                            </div>
+                                                            <span class="mr-5 ml-5 separator-between"> ..</span> -->
+                                                            <div
+                                                                class="p-relative d-inline-block dsn-category dsn-bg metas mb-10 entry-meta">
+                                                                <span data-separator=" & ">Informational</span>
+                                                            </div>
+                                                        </div>
+                                                        <h2 class="post-title dsn-bg title-block">
+                                                            <a class="effect-ajax"
+                                                                href="Things-to-consider-while-designing-website.html"
+                                                                data-dsn-text="Our Stories">
+                                                                Things to consider while designing a website.
+                                                            </a>
+                                                        </h2>
+                                                    </div>
+
+                                                    <div class="post-description-info ">
+                                                        <p class="section_description mt-15 max-w570 ">
+                                                            When designing a website, there are several things you need
+                                                            to consider to ensure that your website is effective,
+                                                            user-friendly...
+                                                        </p>
+                                                        <div class="d-flex mt-20 dsn-def-btn dsn-hover-icon">
+                                                            <a href="Things-to-consider-while-designing-website.html"
+                                                                class="effect-ajax dsn-btn dsn-border border-color-default  background-section has-icon-left">
+                                                                <span
+                                                                    class="dsn-icon dsn-bg-before btn-icon-left heading-color z-index-1"><i
+                                                                        class="fas fa-angle-right"></i></span>
+                                                                <span
+                                                                    class="title-btn p-relative  z-index-1 heading-color">READ
+                                                                    ARTICLE</span>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+
+                                                </div>
+                                            </div>
+
+
+                                        </article>
+                                    </div>
+                                    <div
+                                        class="dsn-swiper-paginate  d-flex p-relative w-100 h-100 mt-30 align-items-center dsn-container justify-content-between">
+                                        <div class="swiper-prev">
+                                            <div class="prev-container">
+                                                <div class="container-inner">
+                                                    <div class="triangle"></div>
+                                                    <svg class="circle" xmlns="http://www.w3.org/2000/svg"
+                                                        viewBox="0 0 24 24">
+                                                        <g class="circle-wrap" fill="none" stroke-width="1"
+                                                            stroke-linejoin="round" stroke-miterlimit="10">
+                                                            <circle cx="12" cy="12" r="10.5"></circle>
+                                                        </g>
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="swiper-pagination  mr-30 ml-30 heading-color"
+                                            data-dsn-type="progressbar"></div>
+                                        <div class="swiper-next">
+                                            <div class="next-container">
+                                                <div class="container-inner">
+                                                    <div class="triangle"></div>
+                                                    <svg class="circle" xmlns="http://www.w3.org/2000/svg" width="24"
+                                                        height="24" viewBox="0 0 24 24">
+                                                        <g class="circle-wrap" fill="none" stroke-width="1"
+                                                            stroke-linejoin="round" stroke-miterlimit="10">
+                                                            <circle cx="12" cy="12" r="10.5"></circle>
+                                                        </g>
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Stories -->
+
 
             <!-- ========== Footer ========== -->
             <footer id="dsn_footer" class="dsn-footer p-relative footer-animate svg-animate background-main">
