--- a/graphic-design-is-important.html
+++ b/graphic-design-is-important.html
@@ -247,9 +247,10 @@
                                         </a>
                                     </div>
                                     <div class="pagination-item w-100 p-20 text-right"><a
-                                            href="graphic-design-is-important.html"><span class="mb-5">NEXT</span>
-                                            <h4 class="title-block word-wrap">Your business needs Graphic Design more
-                                                than you realize</h4>
+                                            href="Things-to-consider-while-designing-website.html"><span
+                                                class="mb-5">NEXT</span>
+                                            <h4 class="title-block word-wrap">Things to consider while designing a
+                                                website.</h4>
                                         </a></div>
                                 </div>
                             </div>
