--- a/get-a-quote.html
+++ b/get-a-quote.html
@@ -142,7 +142,7 @@
                         <div class="content p-relative ">
                             <div class="intro-project w-100">
                                 <div class="intro-title ">
-                                    <p class="dsn-heading-title d-inline-block orange">Get A Quote </p>
+                                    <p class="dsn-heading-title d-inline-block orange">GET A QUOTE </p>
                                     <div id="hero_title" class="mt-10">
                                         <h1 class="title text-upper">Let's go over your project details.
                                         </h1>
