--- a/services.html
+++ b/services.html
@@ -315,11 +315,12 @@
                     <div class="Services-item p-relative grid-item">
                         <div class="Services-item-inner align-items-center number-item h-100">
                             <div class="dsn-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" viewBox="0 0 20 20">
+                                <img src="assets/img/how-we-work.png" alt="" width="80px" height="80px" />
+                                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" viewBox="0 0 20 20">
                                     <path
                                         d="M17.5 2h-16c-0.827 0-1.5 0.673-1.5 1.5v10c0 0.827 0.673 1.5 1.5 1.5h7.5v2h-3.5c-0.276 0-0.5 0.224-0.5 0.5s0.224 0.5 0.5 0.5h8c0.276 0 0.5-0.224 0.5-0.5s-0.224-0.5-0.5-0.5h-3.5v-2h7.5c0.827 0 1.5-0.673 1.5-1.5v-10c0-0.827-0.673-1.5-1.5-1.5zM18 13.5c0 0.276-0.224 0.5-0.5 0.5h-16c-0.276 0-0.5-0.224-0.5-0.5v-10c0-0.276 0.224-0.5 0.5-0.5h16c0.276 0 0.5 0.224 0.5 0.5v10z">
                                     </path>
-                                </svg>
+                                </svg> -->
                             </div>
                             <a href="./how-we-work.html">
                                 <div class="Services-content p-relative">
@@ -334,14 +335,15 @@
                     <div class="Services-item p-relative grid-item border-left">
                         <div class="Services-item-inner align-items-center number-item h-100">
                             <div class="dsn-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" viewBox="0 0 20 20">
+                                <img src="assets/img/what-we-do.png" alt="" width="80px" height="80px" />
+                                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" viewBox="0 0 20 20">
                                     <path
                                         d="M5.5 15h-4c-0.827 0-1.5-0.673-1.5-1.5v-12c0-0.827 0.673-1.5 1.5-1.5h14c0.827 0 1.5 0.673 1.5 1.5v7c0 0.276-0.224 0.5-0.5 0.5s-0.5-0.224-0.5-0.5v-7c0-0.276-0.224-0.5-0.5-0.5h-14c-0.276 0-0.5 0.224-0.5 0.5v12c0 0.276 0.224 0.5 0.5 0.5h4c0.276 0 0.5 0.224 0.5 0.5s-0.224 0.5-0.5 0.5z">
                                     </path>
                                     <path
                                         d="M13 20c-0.198 0-0.386-0.119-0.464-0.314l-1.697-4.242-2.963 3.386c-0.137 0.157-0.357 0.212-0.552 0.139s-0.324-0.26-0.324-0.468v-15c0-0.198 0.117-0.377 0.298-0.457s0.392-0.046 0.539 0.087l11 10c0.153 0.139 0.205 0.358 0.13 0.55s-0.26 0.32-0.466 0.32h-4.261l1.726 4.314c0.103 0.256-0.022 0.547-0.279 0.65l-2.5 1c-0.061 0.024-0.124 0.036-0.186 0.036zM11 14c0.028 0 0.056 0.002 0.084 0.007 0.172 0.029 0.315 0.146 0.38 0.307l1.814 4.536 1.572-0.629-1.814-4.536c-0.062-0.154-0.043-0.329 0.050-0.466s0.248-0.22 0.414-0.22h3.707l-9.207-8.37v12.539l2.624-2.999c0.096-0.109 0.233-0.171 0.376-0.171z">
                                     </path>
-                                </svg>
+                                </svg> -->
                             </div>
                             <a href="./services.html">
                                 <div class="Services-content p-relative">
@@ -356,7 +358,8 @@
                     <div class="Services-item p-relative border-left grid-item">
                         <div class="Services-item-inner align-items-center number-item h-100">
                             <div class="dsn-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="50" viewBox="0 0 20 20">
+                                <img src="assets/img/get-a-quote.png" alt="" width="80px" height="80px" />
+                                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" viewBox="0 0 20 20">
                                     <path
                                         d="M5 15c-0.128 0-0.256-0.049-0.354-0.146l-4-4c-0.195-0.195-0.195-0.512 0-0.707l4-4c0.195-0.195 0.512-0.195 0.707 0s0.195 0.512 0 0.707l-3.646 3.646 3.646 3.646c0.195 0.195 0.195 0.512 0 0.707-0.098 0.098-0.226 0.146-0.354 0.146z">
                                     </path>
@@ -366,7 +369,7 @@
                                     <path
                                         d="M7.5 15c-0.091 0-0.182-0.025-0.265-0.076-0.234-0.146-0.305-0.455-0.159-0.689l5-8c0.146-0.234 0.455-0.305 0.689-0.159s0.305 0.455 0.159 0.689l-5 8c-0.095 0.152-0.258 0.235-0.424 0.235z">
                                     </path>
-                                </svg>
+                                </svg> -->
                             </div>
                             <a href="./get-a-quote.html">
                                 <div class="Services-content p-relative">
@@ -622,9 +625,9 @@
                                                                 June 12, 2022
                                                             </div> -->
                                                             <!-- <span class="mr-5 ml-5 separator-between"> ..</span> -->
-                                                            <div
-                                                                class="p-relative d-inline-block dsn-category dsn-bg metas mb-10 entry-meta">
-                                                                <span data-separator=" & ">Informational</span>
+
+                                                            <div class="description d-inline-block orange mb-10">
+                                                                <span data-separator=" & ">INFORMATIONAL</span>
                                                             </div>
                                                         </div>
                                                         <h2 class="post-title dsn-bg title-block">
@@ -644,7 +647,7 @@
                                                             target audience.
                                                         </p>
                                                         <div class="d-flex mt-20 dsn-def-btn dsn-hover-icon">
-                                                            <a href="single-post.html"
+                                                            <a href="graphic-design-is-important.html"
                                                                 class="effect-ajax dsn-btn dsn-border border-color-default  background-section has-icon-left">
                                                                 <span
                                                                     class="dsn-icon dsn-bg-before btn-icon-left heading-color z-index-1"><i
@@ -665,8 +668,8 @@
                                         <article
                                             class="dsn-item-post grid-item over-hidden p-relative box-hover-image swiper-slide">
                                             <div class="box-content d-flex ">
-                                                <a class="effect-ajax box-image-link bg-shadow" href="single-post.html"
-                                                    data-dsn-text="Our Stories">
+                                                <a class="effect-ajax box-image-link bg-shadow"
+                                                    href="what-is-rebranding.html" data-dsn-text="Our Stories">
                                                     <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                         data-overlay="4">
                                                         <img src="assets/img/blog/branding.jpg" class="cover-bg-img"
@@ -682,13 +685,12 @@
                                                                 Marc 15, 2022
                                                             </div>
                                                             <span class="mr-5 ml-5 separator-between"> ..</span> -->
-                                                            <div
-                                                                class="p-relative d-inline-block dsn-category dsn-bg metas mb-10 entry-meta">
-                                                                <span data-separator=" & ">Informational</span>
+                                                            <div class="description d-inline-block orange mb-10">
+                                                                <span data-separator=" & ">INFORMATIONAL</span>
                                                             </div>
                                                         </div>
                                                         <h2 class="post-title dsn-bg title-block">
-                                                            <a class="effect-ajax" href="single-post.html"
+                                                            <a class="effect-ajax" href="what-is-rebranding.html"
                                                                 data-dsn-text="Our Stories">
                                                                 What is rebranding, and when is it to be used?
                                                             </a>
@@ -721,7 +723,8 @@
                                         <article
                                             class="dsn-item-post grid-item over-hidden p-relative box-hover-image swiper-slide">
                                             <div class="box-content d-flex ">
-                                                <a class="effect-ajax box-image-link bg-shadow" href="single-post.html"
+                                                <a class="effect-ajax box-image-link bg-shadow"
+                                                    href="Things-to-consider-while-designing-website.html"
                                                     data-dsn-text="Our Stories">
                                                     <div class="box-image-bg before-z-index dsn-swiper-parallax-transform"
                                                         data-overlay="4">
@@ -738,9 +741,9 @@
                                                                 Oct 23, 2022
                                                             </div>
                                                             <span class="mr-5 ml-5 separator-between"> ..</span> -->
-                                                            <div
-                                                                class="p-relative d-inline-block dsn-category dsn-bg metas mb-10 entry-meta">
-                                                                <span data-separator=" & ">Informational</span>
+                                                            <div class="description d-inline-block orange mb-10">
+                                                                <span data-separator=" & ">INFORMATIONAL</span>
+
                                                             </div>
                                                         </div>
                                                         <h2 class="post-title dsn-bg title-block">
