--- a/portfolio.html
+++ b/portfolio.html
@@ -182,7 +182,7 @@
                                                     <div class="post-meta max-w750">
                                                         <div
                                                             class="p-relative d-inline-block dsn-category dsn-bg metas mb-10 entry-meta">
-                                                            <span data-separator="&">BRAND DEVELOPMENT</span>
+                                                            <span data-separator="&">Branding - Brand Development</span>
                                                         </div>
                                                     </div>
                                                     <h2 class="post-title title">
