--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
                         <h2 class="title-h2 ">
                             IF YOU HAVE QUESTIONS PLEASE <br>CONTACT US
                         </h2>
-                        <p class="mt-10">Fill fields and find approximate your repair</p>
+                        <p class="mt-10">Fill out the information below</p>
                         <div class="dsn-form mt-20 form-box d-flex flex-column">
                             <script src="https://clients.abstract-creative.com/frm/y31nqAendMrkk8KZ.js"></script>
                             <!-- <form id="contact-form" class="form w-100" method="post" action="contact.php"
