--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
                                 <p class="mt-20 max-w570">
                                     What if the time has come for you to change? Starting a collaboration is easy! Order
                                     a free consultation or call back. We are always in touch and happy to cooperate with
-                                    you
+                                    you.
                                 </p>
                                 <div class="dsn-def-btn dsn-hover-icon dsn-icon-heading-color mt-20 d-flex">
                                     <!-- <a class="dsn-btn dsn-border border-color-default  background-section  has-icon-left"
