--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                                 <div class="dsn-icon">
                                     <img src="assets/img/how-we-work.png" alt="" width="80px" height="80px" />
                                 </div>
-                                <a href="./how-we-work.html">
+                                <a href="./services.html">
                                     <div class="Services-content p-relative">
                                         <h4 class="Services_title sm-title-block text-upper">How We Work</h4>
                                         <div class="Services_description mt-10 max-w570 dsn-auto">
