--- a/services.html
+++ b/services.html
@@ -322,7 +322,7 @@
                                     </path>
                                 </svg> -->
                             </div>
-                            <a href="./how-we-work.html">
+                            <a href="./services.html">
                                 <div class="Services-content p-relative">
                                     <h4 class="Services_title sm-title-block text-upper">How We Work</h4>
                                     <div class="Services_description mt-10 max-w570 dsn-auto">
