--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                             <div class="dsn-up Services-item p-relative grid-item style-box">
                                 <div class="Services-item-inner border-style number-item h-100">
                                     <div class="dsn-icon">
-                                        <img src="assets/img/digital-black.png" alt="" width="100px" height="100px" />
+                                        <img src="assets/img/print-black.png" alt="" width="100px" height="100px" />
                                     </div>
                                     <div class="Services-content p-relative">
                                         <h4 class="Services_title  title-block">PRINT</h4>
@@ -1528,7 +1528,7 @@
                                     <div class="menu-footer-menu-container">
                                         <ul id="menu-footer-menu" class="menu">
                                             <li class="menu-item">
-                                                <a href="home.html" class="">HOME</a>
+                                                <a href="index.html" class="">HOME</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="portfolio.html" class="">PORTFOLIO</a>
