--- a/services.html
+++ b/services.html
@@ -880,7 +880,7 @@
                                 <div class="menu-footer-menu-container">
                                     <ul id="menu-footer-menu" class="menu">
                                         <li class="menu-item">
-                                            <a href="home.html" class="">HOME</a>
+                                            <a href="index.html" class="">HOME</a>
                                         </li>
                                         <li class="menu-item">
                                             <a href="portfolio.html" class="">PORTFOLIO</a>
